--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4eac6;
-    background-image: url(../Patrick_Braz_AV1/IMG/topography.jpg);
+    background-image: url(IMG/topography.jpg);
     background-size:  cover;
     color: #333;
     display: flex;
