--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4eac6;
-    background-image: url(topography.jpg); 
+    background-image: url(OIP.jpeg); 
     background-size:  cover;
     color: #333;
     display: flex;
